force-app/main/default/objects/sravani__c/sravani__c.object-meta.xml
<CustomObject>
    <description>sravani</description>
    <label>sravani</label>
    <nameField>
        <label>sravani Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sravanis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>