force-app/main/default/objects/sravani__c/sravani__c.field-meta.xml
<CustomField>
    <fullName>sravani__c</fullName>
    <description>sravani</description>
    <inlineHelpText>sravani</inlineHelpText>
    <label>sravani</label>
    <length>100</length>
    <type>Text</type>
</CustomField>