force-app/main/default/objects/sravani__c/fields/sravanic__c.field-meta.xml
<CustomField>
    <fullName>sravanic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>sravani</description>
    <inlineHelpText>sravani</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>sravanis</relationshipLabel>
    <relationshipName>sravanis</relationshipName>
    <type>Lookup</type>
</CustomField>