force-app/main/default/objects/sravani__c/fields/sravanif__c.field-meta.xml
<CustomField>
    <fullName>sravanif__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sravanif</label>
    <type>Date</type>
</CustomField>