force-app/main/default/objects/sravani__c/fields/sravanim__c.field-meta.xml
<CustomField>
    <fullName>sravanim__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>sravanis</relationshipLabel>
    <relationshipName>sravanis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>