force-app/main/default/objects/sravani__c/fields/sravanip__c.field-meta.xml
<CustomField>
    <fullName>sravanip__c</fullName>
    <description>sravani</description>
    <inlineHelpText>sravani</inlineHelpText>
    <label>sravanip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sravani</fullName>
            </value>
            <value>
                <fullName>sravanin</fullName>
            </value>
            <value>
                <fullName>sravanis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>