force-app/main/default/objects/sravani__c/fields/sravanipp__c.field-meta.xml
<CustomField>
    <fullName>sravanipp__c</fullName>
    <label>sravanipp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>sravanip__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sravani</fullName>
            </value>
            <value>
                <fullName>sravania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>