force-app/main/default/objects/sravani__c/fieldSets/sravani.recordType-meta.xml
<RecordType>
    <fullName>sravani</fullName>
    <active>true</active>
    <label>sravani</label>
</RecordType>